--- a/presentation/src/components/styles/_base.scss
+++ b/presentation/src/components/styles/_base.scss
@@ -8,8 +8,8 @@ $title-size: 28px;
 $main-font: "Nunito", sans-serif;
 $primary-color: #3DBF74;
 $text-color: #464443;
-$text-hover-color: #64D25C;
-$button-hover-color: #64D25C;
+$text-hover-color: #21a067;
+$button-hover-color: #21a067;
 $button-text: white;
 $body-font-size: 16px;
 
