--- a/presentation/src/components/Nav/Nav.scss
+++ b/presentation/src/components/Nav/Nav.scss
@@ -24,13 +24,16 @@
 	-moz-box-shadow: 0 0 3px #cccc;
 	box-shadow: 0 0 3px #ccc;
 
-	navlinks, navlinks a {
+	navlinks {
 		align-self: center;
-		margin-right: 30px;
 		color: #222;
-		margin: 5px;
 		font-weight: bold;
-		letter-spacing: 0.1em
+		letter-spacing: 0.1em;
+		margin-right: 30px;
+	}
+
+	navlinks a {
+		margin: 5px;
 	}
 
 	navlinks a:hover {
