html/css updates

--- a/presentation/src/components/styles/_base.scss
+++ b/presentation/src/components/styles/_base.scss
@@ -15,7 +15,7 @@ $text-color: #464443;
 $text-hover-color: #21A067;
 $button-hover-color: #21A067;
 $button-text: white;
-
+$bg_color:#D0D0D0;
 
 /* Base Styles */
 * {
