--- a/presentation/src/components/UploadForm/upload.html
+++ b/presentation/src/components/UploadForm/upload.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<div class="uploadbody">
+<div class="upload_body">
     <div class="form_field">
         <h1>Upload a post</h1>
 
@@ -26,51 +26,54 @@
             </label>
         </div>
 
-        <div class="titleform">
-            <h2>Title</h2>
-            <input class="input" type="text" placeholder="Title">
-        </div>
+        <div class="inputs">
+            <div class="form">
+                <h2>Title</h2>
+                <input class="input" type="text" placeholder="Provide a title to your creation">
+            </div>
 
-        <div class="description">
-            <h2>Description</h2>
-            <div class="field">
+            <div class="form">
+                <h2>Description</h2>
                 <div class="control">
                     <textarea class="textarea" placeholder="Describe your creation"></textarea>
                 </div>
             </div>
-        </div>
 
-        <div class="materials">
-            <h2>Materials used</h2>
-            <div class="field">
-                <label class="checkbox">
-                    <input type="checkbox">
-                    Cardboard
-                </label>
+            <div class="materials">
+                <h2>Materials used</h2>
+                <div class="checkboxes">
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        Cardboard
+                    </label>
 
-                <label class="checkbox">
-                    <input type="checkbox">
-                    Paper
-                </label>
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        Paper/Cardboard
+                    </label>
 
-                <label class="checkbox">
-                    <input type="checkbox">
-                    Glass
-                </label>
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        Glass
+                    </label>
 
-                <label class="checkbox">
-                    <input type="checkbox">
-                    Cloth
-                </label>
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        Textile
+                    </label>
 
-                <label class="checkbox">
-                    <input type="checkbox">
-                    Plastic
-                </label>
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        Plastic
+                    </label>
 
+                    </div>
+                </div>
+
+            <div class="button">
+                Post
             </div>
         </div>
-
 
     </div>
 
