--- a/presentation/src/components/UploadForm/upload.scss
+++ b/presentation/src/components/UploadForm/upload.scss
@@ -1,11 +1,13 @@
 
-@import "../styles/_base";
+//@import "../styles/_base";
+@import "../styles/style";
 
 h1{
-  font-size: large;
+  font-size: 2rem;
   font-weight: bold;
   color: $primary-color;
   text-align: center;
+  margin-bottom:30px;
 }
 
 h2{
@@ -13,10 +15,9 @@ h2{
   color: $text-color;
 }
 
-
-uploadbody {
+.upload_body {
   padding: 20px;
-  background-color: $bg_color;
+  background-color:$bg_color;
 }
 
 .form_field{
@@ -24,11 +25,33 @@ uploadbody {
   margin-left:auto;
   margin-right:auto;
   padding: 50px;
-  background-color: rgb(255, 255, 255);
-  border:1px solid $bg_color;
+  background-color: white;
 }
 
-.field{
-  padding: 50px;
-  border:1px solid $bg_color;
+.file{
+  display:block;
+  margin:auto;
+  width:50%;
+  padding:10px;
+}
+
+.form {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.checkboxes{
+  border:1px solid $border-color;
+  padding: 10px;
+}
+.checkbox{
+  padding: 10px;
+}
+
+.button {
+  width:30%;
+  display:block;
+  margin:auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
