--- a/presentation/src/components/styles/_base.scss
+++ b/presentation/src/components/styles/_base.scss
@@ -15,7 +15,8 @@ $text-color: #464443;
 $text-hover-color: #21A067;
 $button-hover-color: #21A067;
 $button-text: white;
-$bg_color:#D0D0D0;
+$bg_color:#f5f5f5;
+$border-color:#d0d0d0;
 
 /* Base Styles */
 * {
