--- a/client/src/components/LandingHero/LandingHero.scss
+++ b/client/src/components/LandingHero/LandingHero.scss
@@ -28,7 +28,7 @@ header {
 		margin-top: 15px;
 		color: white;
 		font-size: 55px;
-		font-family: $header-font, sans-serif;
+		font-family: $hero-font, sans-serif;
 		font-weight: bold;
 		z-index: 2;
 		overflow-wrap: break-word;
