--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Nunito|Raleway:400,700');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Poppins:400,700|Raleway:400,700');
 
 @import "@/scss/bulma/bulma.sass";
 
@@ -6,7 +6,7 @@
 //Fonts
 $logotype-font: "Playfair Display", sans-serif;
 $hero-font: "Playfair Display", sans-serif;
-$body-family: "Nunito", sans-serif;
+$body-family: "Poppins", sans-serif;
 $title-font: "Raleway", sans-serif;
 $title-size: 28px;
 $body-size: 16px;
