Working on routes

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -15,13 +15,18 @@ $body-size: 16px;
 $primary-color: #3DBF74;
 $body-color: #464443;
 $link: $primary-color;
-$link-hover: #21A067;
+$link-hover: #555;
 $button-hover-color: #21A067;
 $button-text: white;
+$hover-background-color: #f5f5f5;
 
 //Navigation
 $navbar-item-color: $body-color;
 $navbar-item-hover-color: $link-hover;
-$navbar-item-hover-background-color: white;
+$navbar-item-hover-background-color: $hover-background-color;
+
+$navbar-dropdown-background-color: white;
+$navbar-dropdown-item-hover-color: $link-hover ;
+$navbar-dropdown-hover-background-color: $hover-background-color;
 $navbar-dropdown-radius: 3px;
 $navbar-dropdown-border-top: solid 1px #eee;
