--- a/client/src/scss/_buttons.scss
+++ b/client/src/scss/_buttons.scss
@@ -1,7 +1,6 @@
 button {
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 14px;
     border-radius: 3px;
     padding: 8px 12px;
     cursor: pointer;
@@ -35,4 +34,8 @@ button {
     width: 100%;
     margin-top: 10px;
     padding: 15px;
+}
+
+.button-no-background:hover {
+    background: transparent!important;
 }
