--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -2,7 +2,8 @@
 
 .logotype {
 	font-family: $logotype-font;
-	padding: 0 20px 2px 20px;
+	margin-left: 20px;
+	padding-bottom: 2px;
 	font-weight: 700;
 	letter-spacing: 0.1em;
 	font-size: 26px;
@@ -12,18 +13,18 @@
 }
 
 .navbar-item {
-	padding: 5px 10px;
+	padding: 15px;
+	font-size: 13px;
 }
 
 .navbar {
 	position: fixed;
 	width: 100%;
 	text-transform: uppercase;
-    font-size: 14px;
 }
 
 .navbar-brand {
-	padding: 8px 12px;
+	padding: 8px 10px;
 }
 
 .navbar-end {
