--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -3,13 +3,16 @@
 .logotype {
 	font-family: $logotype-font;
 	margin-left: 20px;
-	padding-bottom: 2px;
+	padding-bottom: 5px;
 	font-weight: 700;
 	letter-spacing: 0.1em;
 	font-size: 26px;
 	color: $primary-color;
 	text-transform: lowercase;
 	align-self: center;
+}
+.logotype:hover {
+	color: $primary-color-dark;
 }
 
 .navbar-item {
