--- a/client/src/scss/_footer.scss
+++ b/client/src/scss/_footer.scss
@@ -2,8 +2,12 @@
 
 #footer {
 	font-size: 12px;
+	width: 100%;
 	padding: 5px;
 	text-transform: uppercase;
+	position: absolute;
+	bottom: 0;
+	background: white;
 
 	.footer-text {
 		padding: 5px;
@@ -21,11 +25,12 @@
 @media screen and (min-width: 480px) {
 	#footer {
 		overflow:auto;
-		padding: 10px;
+		padding: 1rem;
 
 		.footer-text {
 			float: left;
 			align-self: center;
+			padding: 0 15px;
 		}
 
 		.footer-links {
@@ -34,6 +39,7 @@
 			float: right;
 			margin-left: auto;
 			align-self: center;
+			padding: 0 10px;
 		}
 	}
 }
