--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -22,8 +22,10 @@
 
 .navbar {
 	position: fixed;
+	top: 0;
 	width: 100%;
 	text-transform: uppercase;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
 
 .navbar-brand {
