--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Poppins:400,700|Raleway:400,700');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Heebo:400,700');
 
 @import "@/scss/bulma/bulma.sass";
 
@@ -6,10 +6,10 @@
 //Fonts
 $logotype-font: "Playfair Display", sans-serif;
 $hero-font: "Playfair Display", sans-serif;
-$body-family: "Poppins", sans-serif;
-$title-font: "Raleway", sans-serif;
-$title-size: 28px;
-$body-size: 16px;
+$body-family: "Heebo", sans-serif;
+$title-font: "Heebo", sans-serif;
+$title-size: 25px;
+$body-size: 13px;
 
 //Colours
 $primary-color: #3DBF74;
@@ -20,6 +20,8 @@ $link-hover: #555;
 $button-hover-color: $primary-color-dark;
 $button-text: white;
 $hover-background-color: #f5f5f5;
+$bg-color:#f9f9f9;
+$border-color:#d0d0d0;
 
 //Navigation
 $navbar-item-color: $body-color;
@@ -31,3 +33,6 @@ $navbar-dropdown-item-hover-color: $link-hover ;
 $navbar-dropdown-hover-background-color: $hover-background-color;
 $navbar-dropdown-radius: 3px;
 $navbar-dropdown-border-top: solid 1px #eee;
+
+//Forms
+$input-focus-border-color: $primary-color;
