Linked CreateItem Page

--- a/client/src/scss/_layout.scss
+++ b/client/src/scss/_layout.scss
@@ -24,3 +24,15 @@
 .spacing-not-last-child {
 	margin-right: 10px;
 }
+
+
+//Transition Animations
+.fade-enter-active, .fade-leave-active {
+  transition-duration: 0.5s;
+  transition-property: opacity;
+  transition-timing-function: ease;
+}
+
+.fade-enter, .fade-leave-active {
+	opacity: 0
+}
