--- a/client/src/components/UploadItemForm/UploadItemForm.scss
+++ b/client/src/components/UploadItemForm/UploadItemForm.scss
@@ -18,7 +18,8 @@ form-label {
 	background-color: $bg-color;
 	width: 100%;
 	height: 100vh;
-	position: fixed;
+	position: absolute;
+	top: 0;
 }
 
 .image-upload input {
@@ -29,7 +30,7 @@ form-label {
 .upload-form {
 	height: 100%;
 	padding: 20px;
-	margin: 65px auto 0 auto;
+	margin: 0 auto;
 	background-color: white;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 }
@@ -49,14 +50,21 @@ form-label {
 	border: 1px solid $border-color;
 	border-radius: 3px;
 	padding: 10px;
+	margin-bottom: 20px;
 }
 .checkbox {
 	padding: 10px;
+	display: block;
 }
 
 @media screen and (min-width: 480px) {
 	.upload-form {
 		padding: 50px;
 		margin: 85px 20px 20px 20px;
+	}
+
+	.checkbox {
+		padding: 10px;
+		display: inline-block;
 	}
 }
