--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -6,24 +6,23 @@
 	padding: 0;
 }
 
-html {
-	height: 100%;
-	box-sizing: border-box;
-  }
+html, body {
+	margin: 0;
+	padding: 0;
+	position: relative;
+	width: 100%;
+	height: 100vh;
+}
 
 *, *:before, *:after {
 	box-sizing: inherit;
-  }
+}
 
 body {
 	font-family: $body-family;
 	color: $body-color;
-	position: relative;
-	margin: 0;
-	padding-bottom: 6rem;
-	min-height: 100%;
-	overflow: auto;
-}
+	font-size: $body-size;
+  }
 
 a {
 	color: $primary-color;
