--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -20,8 +20,9 @@ $link-hover: #555;
 $button-hover-color: $primary-color-dark;
 $button-text: white;
 $hover-background-color: #f5f5f5;
-$bg-color:#f9f9f9;
-$border-color:#d0d0d0;
+$bg-color: #f9f9f9;
+$border-color: #f0f0f0;
+$box-drop-shadow: 0 1px 3px rgba(0,0,0,0.1);
 
 //Navigation
 $navbar-item-color: $body-color;
