--- a/client/src/components/UploadItemForm/UploadItemForm.scss
+++ b/client/src/components/UploadItemForm/UploadItemForm.scss
@@ -15,11 +15,11 @@ form-label {
 }
 
 .upload-page-body{
-	background-color: $bg-color;
+    background-color: $bg-color;
+    padding-top: 65px;
 	width: 100%;
-	height: 100vh;
-	position: absolute;
-	top: 0;
+	height: 100%;
+    position: relative;
 }
 
 .image-upload input {
@@ -28,11 +28,10 @@ form-label {
 }
 
 .upload-form {
-	height: 100%;
 	padding: 20px;
 	margin: 0 auto;
 	background-color: white;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+	box-shadow: $box-drop-shadow;
 }
 
 .file {
@@ -60,7 +59,7 @@ form-label {
 @media screen and (min-width: 480px) {
 	.upload-form {
 		padding: 50px;
-		margin: 85px 20px 20px 20px;
+		margin: 20px;
 	}
 
 	.checkbox {
