--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $primary-color: #3DBF74;
 $primary-color-dark: #21A067;
 $body-color: #464443;
 $link: $primary-color;
+$link-secondary: #777;
 $link-hover: #555;
 $button-hover-color: $primary-color-dark;
 $button-text: white;
