--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -21,17 +21,21 @@
     color: $body-color;
     display: block;
 
-    .item-title, .item-title a {
+    .item-title {
         font-weight: bold;
     }
 
-    .item-creator, .item-creator a {
+    .item-creator {
         padding-bottom: 25px;
     }
 
-    .item-category, .item-creator a {
-        font-size: 12px;
+    .item-category {
+        color: $link-secondary;
     }
+}
+
+.card-content a:hover {
+    text-decoration: underline;
 }
 
 // @media screen and (min-width: 480px) {
