--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -24,12 +24,14 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
+	height: 60px;
 	text-transform: uppercase;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
 
 .navbar-brand {
 	padding: 8px 10px;
+	align-self: center;
 }
 
 .navbar-end {
