--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -1,12 +1,30 @@
 @import "@/scss/global.scss";
 
-.small-card {
-    margin: 30px;
+.display-grid {
+    margin: 0 auto;
+    background-color: $bg-color;
+    padding: 60px;
+	width: 100%;
+	height: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.display-grid  > .small-card {
     box-shadow: $box-drop-shadow;
     position: relative;
     margin: 20px auto;
     color: $body-color;
-    max-width: 400px;
+    max-width: 320px;
+}
+
+.small-card {
+    box-shadow: $box-drop-shadow;
+    position: relative;
+    margin: 20px auto;
+    color: $body-color;
+    max-width: 320px;
 }
 
 .card-footer {
