--- a/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
+++ b/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
@@ -1,9 +1,81 @@
 @import "@/scss/global.scss";
 
-#display-grid {
+.display-grid {
+    margin: 0 auto;
     background-color: $bg-color;
     padding-top: 60px;
 	width: 100%;
 	height: 100%;
     position: relative;
+}
+
+.small-card {
+    box-shadow: $box-drop-shadow;
+    position: relative;
+    margin: 20px auto;
+    color: $body-color;
+}
+
+.card-footer {
+    border-top: solid 1px $border-color;
+}
+
+.card-content {
+    padding: 10px;
+}
+
+.card-content, .card-content a {
+    color: $body-color;
+    display: block;
+
+    .item-title {
+        font-weight: bold;
+    }
+
+    .item-creator {
+        padding-bottom: 25px;
+    }
+
+    .item-category {
+        color: $link-secondary;
+    }
+}
+
+.card-content a:hover {
+    text-decoration: underline;
+}
+
+@media screen and (min-width: 480px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: auto auto;
+        align-content: flex-start;
+        margin: 0 auto;
+        padding: 15px;
+    }
+
+    .small-card {
+        margin: 10px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        align-content: flex-start;
+        margin: 0 auto;
+        padding: 15px;
+    }
+
+    .small-card {
+        margin: 10px;
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .grid-container {
+        grid-template-columns: auto auto auto auto;
+    }
+
 }
