Updated responsive display grid

--- a/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
+++ b/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
@@ -10,7 +10,7 @@
 }
 
 .small-card {
-    box-shadow: $box-drop-shadow;
+    border-bottom: solid 1px $border-color;
     position: relative;
     margin: 20px auto;
     color: $body-color;
@@ -55,6 +55,7 @@
     }
 
     .small-card {
+        box-shadow: $box-drop-shadow;
         margin: 10px;
     }
 }
@@ -67,13 +68,9 @@
         margin: 0 auto;
         padding: 15px;
     }
-
-    .small-card {
-        margin: 10px;
-    }
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1280px) {
     .grid-container {
         grid-template-columns: auto auto auto auto;
     }
