--- a/client/src/components/UploadItemForm/UploadItemForm.scss
+++ b/client/src/components/UploadItemForm/UploadItemForm.scss
@@ -12,6 +12,7 @@ h1 {
 form-label {
 	color: $body-color;
 	font-weight: 700;
+	margin-top: 20px;
 }
 
 .upload-page-body{
@@ -41,8 +42,7 @@ form-label {
 }
 
 .form {
-	margin-top: 20px;
-	margin-bottom: 10px;
+	margin: 30px 0;
 }
 
 .checkboxes {
