--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -23,6 +23,7 @@ $button-text: white;
 $hover-background-color: #f5f5f5;
 $bg-color: #f9f9f9;
 $border-color: #f0f0f0;
+$card-footer-border-top: $border-color!important;
 $box-drop-shadow: 0 1px 3px rgba(0,0,0,0.1);
 
 //Navigation
