Tweaked Discover Page

--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -28,7 +28,7 @@
 }
 
 .card-footer {
-    border-top: solid 1px $border-color;
+    border-top: solid 1px $card-footer-border-top;
 }
 
 .card-content {
