--- a/client/src/scss/_banner.scss
+++ b/client/src/scss/_banner.scss
@@ -10,7 +10,7 @@ header {
  	justify-content:  center;
 	background: url("https://i.imgur.com/b6gmE7D.jpg");
 	background-size: 100%;
- 	overflow: hidden;
+	overflow: hidden;
 
  	.overlay {
 	    position: absolute;
@@ -25,9 +25,9 @@ header {
 	.intro-heading {
 		position: relative;
 		text-align: center;
-		margin-top: 15px;
+		margin-top: 25px;
 		color: white;
-		font-size: 1.7rem;
+		font-size: 1.5rem;
 		font-family: $hero-font, sans-serif;
 		font-weight: bold;
 		z-index: 2;
@@ -36,22 +36,22 @@ header {
 }
 
 @media screen and (min-width: 480px) {
-	header {
+	.banner {
 		height: 40vh;
 
 		.intro-heading {
-				font-size: 5.5vw;
+			font-size: 5.75vw;
 		}
 	}
 }
 
 @media screen and (min-width: 768px) {
-	header {
-		height: 50vh;
+	.banner {
+		height: 45vh;
 		background-size: auto;
 
 		.intro-heading {
-				font-size: 50px;
+			font-size: 50px;
 		}
 	}
 }
