--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -3,36 +3,26 @@
 .display-grid {
     margin: 0 auto;
     background-color: $bg-color;
-    padding: 60px;
 	width: 100%;
 	height: 100%;
     position: relative;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.display-grid  > .small-card {
-    box-shadow: $box-drop-shadow;
-    position: relative;
-    margin: 20px auto;
-    color: $body-color;
-    max-width: 320px;
 }
 
 .small-card {
-    box-shadow: $box-drop-shadow;
+    border-bottom: solid 1px $border-color;
     position: relative;
-    margin: 20px auto;
     color: $body-color;
-    max-width: 320px;
+    background-color: $card-color;
+    box-shadow: $box-drop-shadow;
+    margin-bottom: 10px;
 }
 
 .card-footer {
-    border-top: solid 1px $card-footer-border-top;
+    border-top: solid 1px $border-color;
 }
 
 .card-content {
-    padding: 15px;
+    padding: 10px;
 }
 
 .card-content, .card-content a {
@@ -56,8 +46,43 @@
     text-decoration: underline;
 }
 
-// @media screen and (min-width: 480px) {
-//     .intro-heading {
-//             font-size: 6vw;
-//         }
-// }
+@media screen and (min-width: 480px) {
+    .grid-container {
+        display: grid;
+        align-content: flex-start;
+        margin: 20px auto;
+        grid-gap: 20px;
+
+        .site-wide {
+            grid-template-columns: auto auto;
+        }
+
+        .profile-grid {
+            grid-template-columns: auto;
+        }
+    }
+
+    .small-card {
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .site-wide {
+        grid-template-columns: auto auto auto;
+    }
+
+    .profile-grid {
+        grid-template-columns: auto auto;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .site-wide {
+        grid-template-columns: auto auto auto auto;
+    }
+
+    .profile-grid {
+        grid-template-columns: auto auto auto;
+    }
+}
