--- a/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
+++ b/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
@@ -1,77 +1,11 @@
 @import "@/scss/global.scss";
 
-.display-grid {
-    margin: 0 auto;
-    background-color: $bg-color;
-	width: 100%;
-	height: 100%;
-    position: relative;
-}
-
-.small-card {
-    border-bottom: solid 1px $border-color;
-    position: relative;
-    margin: 20px auto;
-    color: $body-color;
-}
-
-.card-footer {
-    border-top: solid 1px $border-color;
-}
-
-.card-content {
+.container {
     padding: 10px;
 }
 
-.card-content, .card-content a {
-    color: $body-color;
-    display: block;
-
-    .item-title {
-        font-weight: bold;
-    }
-
-    .item-creator {
-        padding-bottom: 25px;
-    }
-
-    .item-category {
-        color: $link-secondary;
-    }
-}
-
-.card-content a:hover {
-    text-decoration: underline;
-}
-
 @media screen and (min-width: 480px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto;
-        align-content: flex-start;
-        margin: 0 auto;
-        padding: 15px;
+    .container {
+        padding: 20px;
     }
-
-    .small-card {
-        box-shadow: $box-drop-shadow;
-        margin: 10px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        align-content: flex-start;
-        margin: 0 auto;
-        padding: 15px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .grid-container {
-        grid-template-columns: auto auto auto auto;
-    }
-
 }
