--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Heebo:400,700');
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 @import "@/scss/bulma/bulma.sass";
 
@@ -24,6 +25,7 @@ $hover-background-color: #f5f5f5;
 $bg-color: #f9f9f9;
 $border-color: #f0f0f0;
 $card-footer-border-top: $border-color;
+$card-color: #fcfcfc;
 $box-drop-shadow: 0 1px 3px rgba(0,0,0,0.1);
 
 //Navigation
