--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -54,11 +54,11 @@
         grid-gap: 20px;
 
         .site-wide {
-            grid-template-columns: auto auto;
+            grid-template-columns: repeat(2, 1fr);
         }
 
         .profile-grid {
-            grid-template-columns: auto;
+            grid-template-columns: repeat(1, 1fr);
         }
     }
 
@@ -69,20 +69,20 @@
 
 @media screen and (min-width: 768px) {
     .site-wide {
-        grid-template-columns: auto auto auto;
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .profile-grid {
-        grid-template-columns: auto auto;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media screen and (min-width: 1280px) {
     .site-wide {
-        grid-template-columns: auto auto auto auto;
+        grid-template-columns: repeat(4, 1fr);
     }
 
     .profile-grid {
-        grid-template-columns: auto auto auto;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
