--- a/client/src/components/ProfileBox/ProfileBox.scss
+++ b/client/src/components/ProfileBox/ProfileBox.scss
@@ -37,17 +37,11 @@ h3 {
     align-self: center;
 }
 
-.icon-wrapper {
+.edit-icon-wrapper {
     position: absolute;
-    top: 15px;
-    right: 15px;
-}
-
-.material-icons .md-18 {
-    font-size: 15px;
-    align-self: center;
-    padding-right: 5px;
-    padding-bottom: 10px;
+    padding: 10px;
+    top: 10px;
+    right: 10px;
 }
 
 .description {
@@ -68,7 +62,7 @@ h3 {
         background-color: white;
         min-width: 252px;
         min-height: 50vh;
-        margin-right: 20px;
+        margin-right: 40px;
 	}
 
 	.profile-img {
