--- a/client/src/scss/_buttons.scss
+++ b/client/src/scss/_buttons.scss
@@ -1,3 +1,4 @@
+//General buttons
 button {
     text-transform: uppercase;
     font-weight: bold;
@@ -38,4 +39,39 @@ button {
 
 .button-no-background:hover {
     background: transparent!important;
+}
+
+//Counter Buttons
+.icon-button-wrapper {
+    margin: 5px 5px -1px 5px;
+    transition: all 600ms ease;
+
+    &:hover, &:focus {
+        cursor: pointer;
+        transition: all 300ms ease;
+    }
+}
+
+.like-button {
+    color: $link-secondary;
+
+    &:hover, &:focus {
+        color: red;
+    }
+}
+
+.bookmark-button {
+    color: $link-secondary;
+
+    &:hover, &:focus {
+        color: gold;
+    }
+}
+
+.liked {
+    color: red;
+}
+
+.bookmarked {
+    color: gold;
 }
