--- a/client/src/scss/_layout.scss
+++ b/client/src/scss/_layout.scss
@@ -33,11 +33,15 @@
 	position: relative;
 }
 
+.nav-spacing {
+	padding-top: 60px;
+}
+
 //Two column layout for user profile page
 .two-column {
 	display: block;
 	width: 100%;
-	padding: 80px 20px 20px 20px;
+	padding: 60px 20px 20px 20px;
 }
 
 @media screen and (min-width: 768px) {
