Edit Icons on Item Cards

--- a/client/src/scss/_buttons.scss
+++ b/client/src/scss/_buttons.scss
@@ -41,7 +41,7 @@ button {
     background: transparent!important;
 }
 
-//Counter Buttons
+//ICONIC BUTTONS
 .icon-button-wrapper {
     margin: 5px 5px -1px 5px;
     transition: all 600ms ease;
@@ -52,6 +52,7 @@ button {
     }
 }
 
+//Like
 .like-button {
     color: $link-secondary;
 
@@ -60,6 +61,11 @@ button {
     }
 }
 
+.liked {
+    color: red;
+}
+
+//Bookmark
 .bookmark-button {
     color: $link-secondary;
 
@@ -67,11 +73,28 @@ button {
         color: gold;
     }
 }
-
-.liked {
-    color: red;
-}
-
 .bookmarked {
     color: gold;
+}
+
+//Edit
+.edit-icon-wrapper {
+    position: absolute;
+    padding: 10px;
+    top: 10px;
+    right: 10px;
+    z-index: 99;
+    transition: all 600ms ease;
+
+    &:hover, &:focus {
+        cursor: pointer;
+        transition: all 300ms ease;
+        color: $primary-color;
+    }
+}
+
+.edit-item-button {
+    padding: 5px;
+    top: 5px;
+    color: white;
 }
