--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -17,6 +17,37 @@
     margin-bottom: 10px;
 }
 
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.1));
+    z-index: 99;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.6s linear;
+}
+
+.edit-wrapper {
+    position: absolute;
+    padding: 10px;
+    top: 3px;
+    right: 3px;
+    z-index: 200;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.card-image:hover > .image-overlay {
+    opacity: 1;
+    transition: opacity 0.2s linear;
+    visibility: visible;
+}
+
 .card-footer {
     border-top: solid 1px $border-color;
 }
