--- a/client/src/components/ProfileBox/ProfileBox.scss
+++ b/client/src/components/ProfileBox/ProfileBox.scss
@@ -14,7 +14,7 @@
     object-fit: cover;
     padding: 10px;
     margin-bottom: 20px;
-	}
+}
 
 .username {
     font-size: 2em;
@@ -37,16 +37,24 @@ h3 {
     align-self: center;
 }
 
+.description {
+    word-wrap: break-word;
+    padding-bottom: 20px;
+}
+
+//Edit
 .edit-icon-wrapper {
     position: absolute;
     padding: 10px;
     top: 10px;
     right: 10px;
-}
+    transition: all 300ms ease;
 
-.description {
-    word-wrap: break-word;
-    padding-bottom: 20px;
+    &:hover, &:focus {
+        cursor: pointer;
+        transition: all 300ms ease;
+        color: $primary-color;
+    }
 }
 
 @media screen and (min-width: 480px) {
