--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -21,13 +21,14 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 60%;
     width: 100%;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.1));
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.0));
     z-index: 99;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.6s linear;
+    transition: visibility 0s 0.3s, opacity 0.3s linear;
+    border-radius: 2px 2px 0 0;
 }
 
 .edit-wrapper {
