--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -11,6 +11,10 @@ $title-font: "Heebo", sans-serif;
 $title-size: 25px;
 $body-size: 13px;
 
+//Layout
+$margin: 40px;
+$page-margin: 60px;
+
 //Colours
 $primary-color: #3DBF74;
 $primary-color-dark: #21A067;
