--- a/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
+++ b/client/src/components/ItemDisplayGrid/ItemDisplayGrid.scss
@@ -1,11 +1,11 @@
 @import "@/scss/global.scss";
 
 .container {
-    padding: 10px;
+    padding: 20px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
     .container {
-        padding: 20px;
+        padding: $margin $page-margin;
     }
 }
