--- a/client/src/scss/_layout.scss
+++ b/client/src/scss/_layout.scss
@@ -41,13 +41,14 @@
 .two-column {
 	display: block;
 	width: 100%;
-	padding: 60px 20px 20px 20px;
+	padding: 20px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 960px) {
 	.two-column {
 		display: flex;
 		width: 100%;
+		padding: $margin $page-margin;
 	}
 
 	.profile-bio {
