--- a/client/src/scss/_layout.scss
+++ b/client/src/scss/_layout.scss
@@ -72,3 +72,49 @@
 .fade-enter, .fade-leave-active {
 	opacity: 0
 }
+
+
+//GRIDS
+@media screen and (min-width: 480px) {
+
+    .grid-container {
+        display: grid;
+        align-content: flex-start;
+        margin: 0 auto;
+        grid-gap: 20px;
+
+        .site-wide {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        .profile-grid {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
+    .small-card {
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 768px) {
+
+    .site-wide {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .profile-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1280px) {
+
+    .site-wide {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .profile-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
