--- a/client/src/components/UploadSuccess/UploadSuccess.scss
+++ b/client/src/components/UploadSuccess/UploadSuccess.scss
@@ -6,13 +6,21 @@ h1 {
 	font-weight: bold;
 	color: $primary-color;
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom:30px;
 }
 
 form-label {
 	color: $body-color;
 	font-weight: 700;
 	margin-top: 20px;
+}
+
+.upload-page-body{
+    background-color: $bg-color;
+    padding-top: 65px;
+	width: 100%;
+	height: 100%;
+    position: relative;
 }
 
 .image-upload input {
@@ -48,7 +56,7 @@ form-label {
 	display: block;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
 	.upload-form {
 		padding: 50px;
 		margin: $margin $page-margin;
