working on form validation for upload page

--- a/client/src/components/UploadItemForm/UploadItemForm.scss
+++ b/client/src/components/UploadItemForm/UploadItemForm.scss
@@ -9,7 +9,7 @@ h1 {
 	margin-bottom: 30px;
 }
 
-form-label {
+label {
 	color: $body-color;
 	font-weight: 700;
 	margin-top: 20px;
@@ -20,7 +20,7 @@ form-label {
 	padding: 5px 0;
 }
 
-.upload-form {
+#upload-form {
 	padding: 20px;
 	margin: 0 auto;
 	background-color: white;
@@ -49,7 +49,7 @@ form-label {
 }
 
 @media screen and (min-width: 768px) {
-	.upload-form {
+	#upload-form {
 		padding: 50px;
 		margin: $margin $page-margin;
 	}
