--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -17,6 +17,13 @@
     margin-bottom: 10px;
 }
 
+@media screen and (min-width: 480px) {
+
+    .small-card {
+        margin: 0;
+    }
+}
+
 .image-overlay {
     position: absolute;
     top: 0;
