--- a/client/src/components/AccountSettings/Acc-Set.scss
+++ b/client/src/components/AccountSettings/Acc-Set.scss
@@ -59,3 +59,18 @@ label {
 		display: inline-block;
 	}
 }
+
+//Edit
+.edit-icon-wrapper {
+    position: absolute;
+    padding: 10px;
+    top: 10px;
+    right: 10px;
+    transition: all 300ms ease;
+
+    &:hover, &:focus {
+        cursor: pointer;
+        transition: all 300ms ease;
+        color: $primary-color;
+    }
+}
