--- a/client/src/scss/_layout.scss
+++ b/client/src/scss/_layout.scss
@@ -44,12 +44,13 @@
 
 //Two column layout for user profile page
 .two-column {
-	display: block;
+	display: block; //single column for small screens
 	width: 100%;
 	padding: 20px;
 }
 
 @media screen and (min-width: 960px) {
+
 	.two-column {
 		display: flex;
 		width: 100%;
