--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -18,9 +18,10 @@ $page-margin: 60px;
 //Colours
 $primary-color: #3DBF74;
 $primary-color-dark: #21A067;
-$body-color: #464443;
+$body-color: #4A4543;
 $link: $primary-color;
 $link-secondary: #777;
+$light-grey: #999;
 $link-hover: #555;
 $button-hover-color: $primary-color-dark;
 $button-text: white;
