edited upload form

--- a/client/src/components/ModalDialog/ModalDialog.scss
+++ b/client/src/components/ModalDialog/ModalDialog.scss
@@ -6,38 +6,46 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(0, 0, 0, .5);
     transition: opacity .3s ease;
     z-index: 9999;
 }
 
 .modal-container {
     position: relative;
-    height: 40vh;
-    min-height: 20rem;
+    height: 30vh;
+    min-height: 25rem;
     background-color: white;
-    margin: auto 20px;
+    margin: 120px 20px;
     box-shadow: $box-drop-shadow;
-    padding: 40px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    border-radius: 3px;
 
     .modal-title {
-        font-weight: bold;
-        font-size: 24px;
-        margin-bottom: 30px;
+        font-weight: 300;
+        font-size: 36px;
+        line-height: 1em;
+        margin-bottom: 20px;
+        text-align: center;
+        color: $link-secondary;
     }
 
     .modal-body {
         font-size: 14px;
+        text-align: center;
+        align-self: center;
     }
 
     .modal-footer {
-        padding: 40px 0px;
+        padding: 30px;
         display: flex;
         justify-content: space-between;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
 }
 
@@ -64,22 +72,20 @@
 @media screen and (min-width: 480px) {
 
     .modal-container {
-        width: 80%;
-        margin: 0 auto;
+        width: 80vw;
+        margin: 120px auto;
+        height: 240px;
 
+        .modal-body {
+            font-size: 16px;
+        }
     }
 }
 
-.button-red {
-	background-color: #FF5C5C;
-	border-color: #FF5C5C;
-	color: white;
-	position: absolute;
-	bottom: 0;
-	right: 0;
+@media screen and (min-width: 768px) {
 
-	&:hover {
-		background-color: #FF263C;
-		border-color: #FF263C;
-	}
+    .modal-container {
+        width: 530px;
+        min-height: 20rem;
+    }
 }
