--- a/client/src/scss/_forms.scss
+++ b/client/src/scss/_forms.scss
@@ -39,6 +39,13 @@ h1 {
 	opacity: 1;
   }
 
+.help-text {
+	font-size: 11px;
+	color: $link-secondary;
+	display: block;
+	padding-top: 5px;
+}
+
 @media screen and (min-width: 480px) {
 	.upload-form {
 		margin: $margin;
@@ -89,7 +96,7 @@ h1 {
 }
 
 .form-section {
-	margin-bottom: $margin;
+	margin-bottom: 30px;
 }
 
 .checkboxes {
