--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Heebo:400,700');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Heebo:300,400,700');
 
 @import "@/scss/bulma/bulma.sass";
 
@@ -22,7 +22,7 @@ $body-color: #4A4543;
 $link: $primary-color;
 $link-secondary: #777;
 $light-grey: #999;
-$link-hover: #555;
+$link-hover: #5a5a5a;
 $button-hover-color: $primary-color-dark;
 $button-text: white;
 $hover-background-color: #f5f5f5;
