--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -14,7 +14,7 @@
     color: $body-color;
     background-color: $card-color;
     box-shadow: $box-drop-shadow;
-    margin-bottom: 10px;
+    margin-bottom: 10px!important; //override bulma's default margin
 }
 
 @media screen and (min-width: 480px) {
