--- a/client/src/components/ModalDialog/_modal.scss
+++ b/client/src/components/ModalDialog/_modal.scss
@@ -11,6 +11,10 @@
     z-index: 9999;
 }
 
+.white-backdrop {
+    background-color: rgba(255,255,255, .5);
+}
+
 .modal-container {
     position: relative;
     height: 30vh;
