--- a/client/src/scss/_forms.scss
+++ b/client/src/scss/_forms.scss
@@ -3,7 +3,6 @@
 h1 {
 	font-size: $title-size;
 	text-transform: uppercase;
-	font-weight: bold;
 	color: $primary-color;
 	text-align: center;
 	margin-bottom: 30px;
@@ -23,7 +22,7 @@ h1 {
 	display: block;
 	font-size: 32px;
 	color: $link-secondary;
-	font-weight: light;
+	font-weight: 300;
 	transition: all 0.2s ease;
 
 	&:focus {
@@ -72,7 +71,7 @@ h1 {
 
 .description {
 	border: 1px solid $border-color;
-	padding: 10px;
+	padding-top: 10px;
 	border-radius: 2px;
 	box-shadow: none;
 	transition: all 0.2s ease;
