--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -21,7 +21,7 @@ $primary-color-dark: #21A067;
 $body-color: #4A4543;
 $link: $primary-color;
 $link-secondary: #777;
-$light-grey: #999;
+$light-grey: #aaa;
 $link-hover: #5a5a5a;
 $button-hover-color: $primary-color-dark;
 $button-text: white;
