--- a/client/src/scss/_forms.scss
+++ b/client/src/scss/_forms.scss
@@ -20,10 +20,14 @@ h1 {
 	border: none;
 	border-bottom: 1px solid $border-color;
 	display: block;
-	font-size: 32px;
+	font-size: 18px;
 	color: $link-secondary;
 	font-weight: 300;
 	transition: all 0.2s ease;
+
+	&:hover {
+		border-bottom: 1px solid #ddd;
+	}
 
 	&:focus {
 		outline: none;
@@ -47,14 +51,22 @@ h1 {
 
 @media screen and (min-width: 480px) {
 	.upload-form {
-		margin: $margin;
-		padding: $page-margin;
+		margin: 20px;
+		padding: $margin;
+	}
+
+	.title-input {
+		font-size: 24px;
 	}
 }
 
 @media screen and (min-width: 768px) {
 	.upload-form {
 		margin: $margin $page-margin;
+	}
+
+	.title-input {
+		font-size: 36px;
 	}
 }
 
@@ -71,15 +83,19 @@ h1 {
 
 .description {
 	border: 1px solid $border-color;
-	padding-top: 10px;
+	padding: 10px;
 	border-radius: 2px;
 	box-shadow: none;
 	transition: all 0.2s ease;
 	color: $body-color;
-	font-size: 16px;
+	font-size: 14px;
 	width: 100%;
 	height: 15vh;
 	min-height: 5rem;
+
+	&:hover {
+		border: 1px solid #ddd;
+	}
 
 	&:focus {
 		outline: none;
