--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Heebo:400,700');
 
-@import "@/scss/bulma/bulma.sass";
+@import "../scss/bulma/bulma.sass";
 
 /* VARIABLES */
 //Fonts
