--- a/client/src/components/AccountSettings/Acc-Set.scss
+++ b/client/src/components/AccountSettings/Acc-Set.scss
@@ -8,6 +8,7 @@ h1 {
 	 text-align: center;
 	 margin-bottom: 30px;
  }
+
 h2 {
 	font-size: $body-size;
 	text-transform: uppercase;
@@ -15,8 +16,15 @@ h2 {
 	color: $primary-color-dark;
 	margin: 10px;
 }
+
 h3{
 	margin: 5px;
+}
+
+.profile-img{
+	width:50%;
+	margin: 0 auto;
+	display:block;
 }
 
 .field{
