--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -8,7 +8,7 @@ $logotype-font: "Playfair Display", sans-serif;
 $hero-font: "Playfair Display", sans-serif;
 $body-family: "Heebo", sans-serif;
 $title-font: "Heebo", sans-serif;
-$title-size: 25px;
+$title-size: 24px;
 $body-size: 13px;
 
 //Layout
@@ -31,6 +31,7 @@ $border-color: #f0f0f0;
 $card-footer-border-top: $border-color;
 $card-color: #fcfcfc;
 $box-drop-shadow: 0 1px 3px rgba(0,0,0,0.1);
+$light-red: #FF5C5C;
 
 //Navigation
 $navbar-item-color: $body-color;
