--- a/client/src/scss/_buttons.scss
+++ b/client/src/scss/_buttons.scss
@@ -33,8 +33,8 @@ button {
 }
 
 .button-red {
-	background-color: #FF5C5C;
-	border-color: #FF5C5C;
+	background-color: $light-red;
+	border-color: $light-red;
 	color: white;
 	margin-left: auto;
 
