--- a/client/src/scss/_forms.scss
+++ b/client/src/scss/_forms.scss
@@ -46,7 +46,7 @@ h1 {
 	font-size: 11px;
 	color: $link-secondary;
 	display: block;
-	padding-top: 5px;
+	padding-top: 3px;
 }
 
 @media screen and (min-width: 480px) {
@@ -110,7 +110,7 @@ h1 {
 	width: 50%;
 }
 
-.form-section {
+.section {
 	margin-bottom: 30px;
 }
 
