--- a/client/src/scss/_buttons.scss
+++ b/client/src/scss/_buttons.scss
@@ -8,6 +8,15 @@ button {
     transition: all 500ms ease;
 }
 
+button:disabled,
+button[disabled],
+button:disabled:hover {
+  background-color: $border-color;
+  color: white;
+  border: $border-color solid 1px;
+  cursor: auto;
+}
+
 .button-dark {
     background: $primary-color;
     color: $button-text;
