Working on search bar

--- a/client/src/components/ImageUploader/ImageUploader.scss
+++ b/client/src/components/ImageUploader/ImageUploader.scss
@@ -6,6 +6,12 @@
 	justify-content: space-between;
 }
 
+.image-upload {
+	display: flex;
+	width: 280px;
+	padding: 5px 0;
+}
+
 .image-upload input {
 	padding: 5px 0;
 }
