--- a/client/src/scss/_forms.scss
+++ b/client/src/scss/_forms.scss
@@ -110,8 +110,12 @@ h1 {
 	width: 50%;
 }
 
-.section {
-	margin-bottom: 30px;
+.form-input {
+  margin-bottom: 15px;
+}
+
+.form-section {
+  margin-bottom: 30px;
 }
 
 .checkboxes {
