--- a/client/src/components/AccountSettings/AccountSettings.scss
+++ b/client/src/components/AccountSettings/AccountSettings.scss
@@ -1,32 +1,5 @@
 @import "../../scss/global";
 
-h1 {
-	 font-size: $title-size;
-	 text-transform: uppercase;
-	 font-weight: bold;
-	 color: $primary-color;
-	 text-align: center;
-	 margin-bottom: 30px;
- }
-
-h2 {
-	font-size: $body-size;
-	text-transform: uppercase;
-	font-weight: bold;
-	color: $primary-color-dark;
-	margin: 10px;
-}
-
-h3 {
-	margin: 5px;
-}
-
-.profile-img {
-	width: 50%;
-	margin: 0 auto;
-	display: block;
-}
-
 .field {
 	margin-top: 10px;
 }
@@ -36,11 +9,25 @@ h3 {
 	margin: 0 auto;
 	background-color: white;
 	box-shadow: $box-drop-shadow;
+
+	h1 {
+    font-size: $title-size;
+    text-transform: uppercase;
+    color: $primary-color;
+    text-align: center;
+    margin-bottom: 30px;
+	}
+}
+
+.profile-img {
+	width: 50%;
+	margin: 0 auto;
+	display: block;
 }
 
 @media screen and (min-width: 768px) {
 	#settings-form {
-		padding: 50px;
+		padding: $margin;
 		margin: $margin $page-margin;
 	}
 }
