--- a/client/src/components/UploadItemForm/UploadItemForm.scss
+++ b/client/src/components/UploadItemForm/UploadItemForm.scss
@@ -33,6 +33,10 @@ label {
 .checkbox {
 	padding: 10px;
 	display: block;
+	label{
+		font-weight:normal;
+		padding:5px;
+	}
 }
 
 @media screen and (min-width: 768px) {
