image validation wip

--- a/client/src/components/UploadItemForm/UploadItemForm.scss
+++ b/client/src/components/UploadItemForm/UploadItemForm.scss
@@ -46,3 +46,33 @@ label {
 		display: inline-block;
 	}
 }
+
+
+//Image Uploader
+.add-image {
+	display: block;
+	padding-bottom: 10px;
+	justify-content: space-between;
+}
+
+.image-upload {
+	display: flex;
+	width: 280px;
+	padding: 5px 0;
+}
+
+.image-upload input {
+	padding: 5px 0;
+}
+
+.close-button {
+	margin-left: auto;
+	cursor: pointer;
+	padding: 5px 10px;
+	transition: all 600ms ease;
+
+	&:hover, &:active, &:focus  {
+		transition: all 300ms ease;
+		color: $primary-color;
+    }
+}
