--- a/client/src/components/UploadItemForm/UploadItemForm.scss
+++ b/client/src/components/UploadItemForm/UploadItemForm.scss
@@ -23,16 +23,22 @@ label {
 	margin: 30px 0;
 }
 
-.checkboxes {
+.materials-list {
 	border: 1px solid $border-color;
 	border-radius: 3px;
 	padding: 10px;
-	margin-bottom: 20px;
+	margin-bottom: 5px;
 }
 
 .checkbox {
 	padding: 10px;
 	display: block;
+}
+
+.checkbox-label {
+	padding-left: 5px;
+	font-weight: normal;
+	font-size: 12px;
 }
 
 @media screen and (min-width: 768px) {
@@ -47,32 +53,68 @@ label {
 	}
 }
 
-
 //Image Uploader
-.add-image {
-	display: block;
-	padding-bottom: 10px;
-	justify-content: space-between;
+.hide-default {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
 
-.image-upload {
-	display: flex;
-	width: 280px;
-	padding: 5px 0;
-}
-
-.image-upload input {
-	padding: 5px 0;
-}
-
-.close-button {
-	margin-left: auto;
+.custom-uploader {
+	padding: 15px 25px;
+	background: $primary-color-light;
+	border-radius: 3px;
+	margin-top: 5px;
+	color: $primary-color;
 	cursor: pointer;
-	padding: 5px 10px;
-	transition: all 600ms ease;
+	font-weight: 300;
+	display: flex;
+	transition: all 0.2s ease;
+	font-size: 12px;
 
-	&:hover, &:active, &:focus  {
-		transition: all 300ms ease;
-		color: $primary-color;
-    }
+	&:hover {
+		background: $primary-color;
+		color: $primary-color-light;
+		transition: all 0.2s ease;
+	}
+
+	.icon-wrap {
+		padding: 7px 12px 5px 0;
+	}
+
+	.button-text {
+		padding: 10px 0 5px 0;
+	}
+
+}
+.image-upload {
+	padding: 10px 0 20px 0;
+}
+
+.file-list {
+	font-weight: 300;
+	color: $link-secondary;
+	display: flex;
+	width: 300px;
+	align-self: center;
+
+	.file-title {
+		padding: 5px 0;
+	}
+
+	.delete-button {
+		margin-left: auto;
+		cursor: pointer;
+		padding: 5px 0;
+		transition: all 600ms ease;
+		color: $light-grey;
+
+		&:hover, &:active, &:focus  {
+			transition: all 300ms ease;
+			color: $primary-color;
+			}
+	}
 }
