--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Heebo:300,400,700');
 @import "/bulma/bulma.sass";
 
@@ -18,6 +19,7 @@ $page-margin: 60px;
 //Colours
 $primary-color: #3DBF74;
 $primary-color-dark: #21A067;
+$primary-color-light: #ECF4EA;
 $body-color: #4A4543;
 $link: $primary-color;
 $link-secondary: #777;
