--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -65,7 +65,7 @@
 }
 
 .card-content {
-    padding: 10px;
+    padding: 10px!important;
 }
 
 .card-content, .card-content a {
@@ -90,7 +90,7 @@
     display: block;
 
     .tag, .tag a {
-        background: white;
+        background: $card-color;
         color: $link-secondary;
         padding: 2px 4px;
         border: $light-grey 1px solid;
