--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -31,7 +31,7 @@ $hover-background-color: #f5f5f5;
 $bg-color: #f9f9f9;
 $border-color: #f0f0f0;
 $card-footer-border-top: $border-color;
-$card-color: #fcfcfc;
+$card-color: #fefefe;
 $box-drop-shadow: 0 1px 3px rgba(0,0,0,0.1);
 $light-red: #FF5C5C;
 
