--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -1,7 +1,7 @@
 @import "../scss/variables";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://use.fontawesome.com/releases/v5.8.2/css/all.css");
 
-/* Base Styles */
 * {
     margin: 0;
     padding: 0;
