Revert "Remove repetitive css"
This reverts commit f714c9788f5979d46d195dc4ecbabfdf74f9cef4.

--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -36,7 +36,7 @@ a:hover {
     transition: all 700ms ease;
 }
 
-.page-title {
+h1 {
     font-size: $title-size;
     text-transform: uppercase;
     color: $primary-color;
