Revert "Merge branch 'master' into Bookmarks2"
This reverts commit 4c6ce2fb5da584af53a465e7a94856502e588475.

--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -18,6 +18,7 @@
 }
 
 @media screen and (min-width: 480px) {
+
   .small-card {
     margin: 0!important;
   }
@@ -49,14 +50,10 @@
   }
 }
 
-.thumbnail:hover > .image-overlay {
+.card-image:hover > .image-overlay {
   opacity: 1;
   transition: opacity 0.2s linear;
   visibility: visible;
-}
-
-.image {
-  margin: 0;
 }
 
 .card-footer {
@@ -75,7 +72,7 @@
   color: $body-color;
   display: block;
 
-  .card-title {
+  .item-title {
       font-weight: bold;
   }
 
