--- a/client/src/components/ProfileBox/ProfileBox.scss
+++ b/client/src/components/ProfileBox/ProfileBox.scss
@@ -48,11 +48,11 @@ h3 {
 	padding: 10px;
 	top: 10px;
 	right: 10px;
-	transition: all 0.3s ease;
+	transition: all 300ms ease;
 
 	&:hover, &:focus {
 		cursor: pointer;
-		transition: all 0.3s ease;
+		transition: all 300ms ease;
 		color: $primary-color;
 	}
 }
