--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -36,7 +36,7 @@ a:hover {
     transition: all 700ms ease;
 }
 
-h1 {
+.page-header {
     font-size: $title-size;
     text-transform: uppercase;
     color: $primary-color;
