--- a/client/src/pages/LeaderBoard/LeaderBoard.scss
+++ b/client/src/pages/LeaderBoard/LeaderBoard.scss
@@ -5,12 +5,16 @@
 }
 #leaderboard th {
   padding: 5px;
+  //color:$primary-color;
 }
 
 #leaderboard td {
   padding: 10px;
   vertical-align: middle;
+  border-bottom:1px dashed $border-color;
 }
+
+
 
 .fab {
   padding: 10px;
